--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,12 @@
-version: "3.8"
-
 services:
   mysql:
     image: mysql:8.0.23
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: example
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
     ports:
-      - 3306:3306
-
-  postgres:
-    image: postgres:13.1
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: example
-    ports:
-      - 5432:5432
+      - ${DB_PORT}:3306
 
   adminer:
     image: adminer
