--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -5,12 +5,10 @@ on:
 
 jobs:
   build-and-deploy:
-    uses: reusable.yml
+    uses: ./.github/workflows/reusable.yml@main
     with:
       environment: prod
       runner-label: production
-
-
 
 
 
