--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-deploy:
-    uses: ./.github/workflows/reusable.yml@main
+    uses: ./.github/workflows/reusable.yml
     with:
       environment: dev
       runner-label: develop
