--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -1,23 +1,22 @@
-name: Build and Deploy
+name: Reusable Deployment Workflow
 
 on:
   workflow_call:
     inputs:
       environment:
+        description: 'The environment to deploy to (dev or prod)'
         required: true
         type: string
       runner-label:
+        description: 'The label for the self-hosted runner'
         required: true
         type: string
 
 jobs:
   build-and-deploy:
-    runs-on: ${{ fromJson('["self-hosted", "${inputs.runner-label}"]') }}
+    runs-on: ${{ inputs.runner-label }}
     environment: ${{ inputs.environment }}
-
-    strategy:
-      matrix:
-        node-version: [20.x]
+        
 
     steps:
       - name: Checkout code
@@ -28,6 +27,14 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+
+      - name: Cache npm dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
 
       - name: Install dependencies
         run: npm ci
