--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -7,9 +7,21 @@ on:
 
 jobs:
   deploy-dev:
-    uses: ./.github/workflows/reusable.yml
-    with:
-      DB_USER: ${{ github.secrets.DB_USER }}
-      DB_PASSWORD: ${{ github.secrets.DB_PASSWORD }}
-      environment: 'dev'
-      runner-label: 'develop'
+    runs-on: [self-hosted, develop]
+    environment: dev
+
+    steps:
+      - name: Deploy to Development
+        uses: ./.github/workflows/reusable.yml
+        with:
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_HOST: ${{ vars.DB_HOST }}
+          DB_PORT: ${{ vars.DB_PORT }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
+          AUTH_EXPIRES_IN: ${{ vars.AUTH_EXPIRES_IN }}
+          DB_DROP_SCHEMA: ${{ vars.DB_DROP_SCHEMA }}
+          PORT: ${{ vars.PORT }}
+          environment: 'dev'
+          runner-label: 'develop'
