Matrix is added

--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -41,7 +41,10 @@ jobs:
   build-and-deploy:
     runs-on: ${{ inputs.runner-label }}
     environment: ${{ inputs.environment }}
-        
+    
+    strategy:
+      matrix:
+        node-version: [20.x]
 
     steps:
       - name: Checkout code
