--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -6,22 +6,51 @@ on:
     branches: ['dev']
 
 jobs:
+  checkout:
+    runs-on: [self-hosted, develop]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+  build:
+    needs: checkout
+    name: Build Node app
+    uses: ./.github/workflows/build-node-app.yml
+    with:
+      environment: dev
+      runner: develop
+
   deploy-dev:
+    needs: build
+    name: Deploy to development environment 
     runs-on: [self-hosted, develop]
     environment: dev
 
     steps:
-      - name: Deploy to Development
-        uses: ./.github/workflows/reusable.yml
+      - name: Create .env file
+        uses: SpicyPizza/create-envfile@v2.0.3
         with:
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_HOST: ${{ vars.DB_HOST }}
-          DB_PORT: ${{ vars.DB_PORT }}
-          DB_NAME: ${{ secrets.DB_NAME }}
-          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
-          AUTH_EXPIRES_IN: ${{ vars.AUTH_EXPIRES_IN }}
-          DB_DROP_SCHEMA: ${{ vars.DB_DROP_SCHEMA }}
-          PORT: ${{ vars.PORT }}
-          environment: 'dev'
-          runner-label: 'develop'
+          envkey_DB_HOST: ${{ vars.DB_HOST }}
+          envkey_DB_PORT: ${{ vars.DB_PORT }}
+          envkey_DB_USER: ${{ secrets.DB_USER }}
+          envkey_DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          envkey_DB_NAME: ${{ secrets.DB_NAME }}
+          envkey_AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
+          envkey_AUTH_EXPIRES_IN: ${{ vars.AUTH_EXPIRES_IN }}
+          envkey_DB_DROP_SCHEMA: ${{ vars.DB_DROP_SCHEMA }}
+          envkey_PORT: ${{ vars.PORT }}
+          directory: ./
+          file_name: .env
+          fail_on_empty: false
+          sort_keys: false
+
+      - name: Run Docker Compose
+        run: docker compose up -d
+
+      - name: Start application
+        run: |
+          if pm2 describe events-app > /dev/null; then
+            pm2 restart events-app --update-env
+          else
+            pm2 start ./dist/main.js --name=events-app
+          fi
