--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -40,3 +40,8 @@ jobs:
     with:
       environment: dev
       runner: develop
+    secrets:
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
