--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   checkout:
     runs-on: [self-hosted, production]
+    environment: prod
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -20,8 +21,13 @@ jobs:
 
   deploy-prod:
     needs: build
-    name: Deploy to development environment 
+    name: Deploy to development environment
     uses: ./.github/workflows/deploy.yml
     with:
       environment: prod
       runner: production
+    secrets:
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
