--- a/.github/workflows/dev-ci.yml
+++ b/.github/workflows/dev-ci.yml
@@ -6,34 +6,7 @@ on:
     branches: ['dev']
 
 jobs:
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20.x
-
-      - name: Cache npm dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm test
-
   checkout:
-    needs: test
     runs-on: [self-hosted, develop]
     steps:
       - name: Checkout code
@@ -46,6 +19,13 @@ jobs:
     with:
       environment: dev
       runner: develop
+
+  test:
+    name: Run Tests
+    runs-on: [self-hosted, develop]
+    steps:
+      - name: Run tests
+        run: npm run test
 
   run-db:
     needs: build
