--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -4,34 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20.x
-
-      - name: Cache npm dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm test
-
   checkout:
-    needs: test
     runs-on: [self-hosted, production]
     environment: prod
     steps:
@@ -45,6 +18,13 @@ jobs:
     with:
       environment: prod
       runner: production
+
+  test:
+    name: Run Tests
+    runs-on: [self-hosted, production]
+    steps:
+      - name: Run tests
+        run: npm run test
 
   deploy-prod:
     needs: build
